--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   google_nav_bar: ^5.0.6
   line_icons: ^2.0.1
   provider: ^6.0.3
+  file_picker: ^4.0.3
+  image_picker: ^0.8.5+3
+  equatable: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -52,8 +55,8 @@ flutter:
   uses-material-design: true
   assets:
     - images/computer.jpg
-    - assets/images/logo.jpg
     - assets/images/avatar.png
+    - assets/images/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
