--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,22 +29,24 @@ environment:
 dependencies:
   carousel_pro: ^1.0.0
   carousel_slider: ^4.1.1
-  cloud_firestore: ^3.1.16
+  cloud_firestore: ^3.1.17
   cupertino_icons: ^1.0.2
   dots_indicator: ^2.1.0
+  equatable: ^2.0.0
+  file_picker: ^4.0.3
   firebase_auth: ^3.3.17
   firebase_core: ^1.16.0
   firebase_storage: ^10.2.16
   flutter:
     sdk: flutter
   flutter_speed_dial: ^6.0.0
+  flutter_typeahead: ^4.0.0
   fluttertoast: ^8.0.9
   google_nav_bar: ^5.0.6
+  image_picker: ^0.8.5+3
   line_icons: ^2.0.1
   provider: ^6.0.3
-  file_picker: ^4.0.3
-  image_picker: ^0.8.5+3
-  equatable: ^2.0.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -71,7 +73,6 @@ flutter:
     - assets/images/blazer.png
     - assets/images/blackshoe.png
     - assets/images/
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
