--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  carousel_pro: ^1.0.0
+  # carousel_pro: ^1.0.0
   carousel_slider: ^4.1.1
   cloud_firestore: ^3.1.17
   cupertino_icons: ^1.0.2
