--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   line_icons: ^2.0.1
   provider: ^6.0.3
   uuid: ^3.0.6
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
