--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   provider: ^6.0.3
   uuid: ^3.0.6
   get: ^4.6.5
+  firebase_in_app_messaging: ^0.6.0+16
+  firebase_messaging: ^11.4.2
+  flutter_chat_ui: ^1.5.8
+  stream_chat_flutter: ^4.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
